--- a/website/templates/hierarchyEmployees/base.html
+++ b/website/templates/hierarchyEmployees/base.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link href="{% static 'hierarchyEmployees/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'hierarchyEmployees/css/bootstrap-responsive.min.css' %}" rel="stylesheet">
+    <link href="{% static 'hierarchyEmployees/css/style.css' %}" rel="stylesheet">
 </head>
 <body>
+<header>
 
+</header>
+
+{% block content%}
+
+
+{% endblock %}
+
+<footer>
+
+</footer>
+    <script src="{% static 'hierarchyEmployees/js/bootstrap.min.js' %}"></script>
 </body>
 </html>
