--- a/website/templates/hierarchyEmployees/index.html
+++ b/website/templates/hierarchyEmployees/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "hierarchyEmployees/base.html" %}
+{% block content%}
 
-</body>
-</html>
+    <h1>Title</h1>
+
+{% endblock %}
