Commit № 9, creating a class and marking up a template that displays workers in a tree-like form, creating and marking up a template for displaying information on all workers, writing filtering logic. Markup in the base application navigation template.  Implementing user authorization  Setting up urls.py. Creating styles for navigation ....... Комит №9, создание класса и разметка шаболна которые выводят работников в деревоподобной форме, создание и разметка шаблона для вывода информации по всем работникам, написание логики фильстрации. Разметка в base шаблоне навигации по приложению.  Реализация авторизации пользователей  Настройка urls.py. Создание стилей для навигации ...... Коміт №9, створення класу та розмітка шаблону які виводять працівників у деревоподібній формі, створення та розмітка шаблону для виведення інформації по всіх працівниках, написання логіки фільтрації. Розмітка в base шаблон навігації за додатком.  Реалізація авторизації користувачів  Налаштування urls.py. Створення стилів для навігації

--- a/website/templates/hierarchyEmployees/base.html
+++ b/website/templates/hierarchyEmployees/base.html
@@ -6,19 +6,44 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link href="{% static 'hierarchyEmployees/css/style.css' %}" rel="stylesheet">
     <link href="{% static 'hierarchyEmployees/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'hierarchyEmployees/css/bootstrap-responsive.min.css' %}" rel="stylesheet">
-    <link href="{% static 'hierarchyEmployees/css/style.css' %}" rel="stylesheet">
 </head>
 <body>
 <header>
-
+    <div class="container">
+        <nav class="navbar">
+                <ul class="nav">
+                    <li class="">
+                        <a class="" href="{% url 'index' %}">Main</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'all_info_employees' %}">All Employees</a>
+                    </li>
+                     <li>
+                        <a href="{% url 'crud' %}">CRUD</a>
+                    </li>
+                    {% if user.is_authenticated %}
+                    <li>
+                        <a class="logout-btn" href="{% url 'account_logout' %}">Logout</a>
+                    </li>
+                    {% else %}
+                     <li>
+                        <a href="{% url 'login_User' %}">Login</a>
+                    </li>
+                    {% endif %}
+                </ul>
+        </nav>
+    </div>
 </header>
 
-{% block content%}
-
-
-{% endblock %}
+<!--Main block content-->
+<div class="container">
+        <div class="row">
+            {% block content%}{% endblock %}
+        </div>
+</div>
 
 <footer>
 
