Commit № 11, creating an employee editing form, creating a template for the form ....... Комит №11, создание формы редактирования сотрудника, создание шаблона для формы ...... Коміт №11, створення форми редагування співробітника, створення шаблону для форми

--- a/website/templates/hierarchyEmployees/base.html
+++ b/website/templates/hierarchyEmployees/base.html
@@ -22,7 +22,7 @@
                         <a href="{% url 'all_info_employees' %}">All Employees</a>
                     </li>
                      <li>
-                        <a href="{% url 'crud' %}">CRUD</a>
+                        <a href="{% url 'crud' %}">Add new Employees</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li>
