--- a/website/templates/hierarchyEmployees/all_info_employees.html
+++ b/website/templates/hierarchyEmployees/all_info_employees.html
@@ -9,78 +9,88 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
         <table class="table">
-        <thead>
-            <tr>
-                <th><input type="text" class="filter-input" data-column="name" placeholder="Фільтр по імені"></th>
-                <th><input type="text" class="filter-input" data-column="surname" placeholder="Фільтр по прізвищу"></th>
-                <th><input type="text" class="filter-input" data-column="surname_patronymic" placeholder="Фільтр по побатькові"></th>
-                <th><input type="text" class="filter-input" data-column="data_admission" placeholder="Фільтр по даті прийому"></th>
-                <th><input type="text" class="filter-input" data-column="email" placeholder="Фільтр по email"></th>
-                <th><input type="text" class="filter-input" data-column="position" placeholder="Фільтр по посаді"></th>
-                <th><input type="text" class="filter-input" data-column="supervisor" placeholder="Фільтр по начальнику"></th>
-            </tr>
-            <tr>
-                <th>Ім'я</th>
-                <th>Призвище</th>
-                <th>Побатькові</th>
-                <th>Дата прийому</th>
-                <th>Email</th>
-                <th>Посада</th>
-                <th>Начальник</th>
-            </tr>
-        </thead>
-        <tbody id="employee-table-body">
-            {% for person in employee %}
-            <tr>
-                <td>{{ person.name }}</td>
-                <td>{{ person.surname }}</td>
-                <td>{{ person.surname_patronymic }}</td>
-                <td>{{ person.data_admission }}</td>
-                <td>{{ person.email }}</td>
-                <td>{{ person.position }}</td>
-                <td>
-                    {% if person.supervisor == None %}
-                        <p>Not date</p>
-                    {% else %}
-                        {{ person.supervisor }}
-                    {% endif %}
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    <thead>
+        <tr>
+            <th><input type="text" class="filter-input" data-column="name" placeholder="Фільтр по імені"></th>
+            <th><input type="text" class="filter-input" data-column="surname" placeholder="Фільтр по прізвищу"></th>
+            <th><input type="text" class="filter-input" data-column="surname_patronymic" placeholder="Фільтр по побатькові"></th>
+            <th><input type="text" class="filter-input" data-column="data_admission" placeholder="Фільтр по даті прийому"></th>
+            <th><input type="text" class="filter-input" data-column="email" placeholder="Фільтр по email"></th>
+            <th><input type="text" class="filter-input" data-column="position" placeholder="Фільтр по посаді"></th>
+            <th><input type="text" class="filter-input" data-column="supervisor" placeholder="Фільтр по начальнику"></th>
+        </tr>
+        <tr>
+            <th>Ім'я</th>
+            <th>Призвище</th>
+            <th>Побатькові</th>
+            <th>Дата прийому</th>
+            <th>Email</th>
+            <th>Посада</th>
+            <th>Начальник</th>
+            <th>Действия</th>
+        </tr>
+    </thead>
+    <tbody id="employee-table-body">
+        {% for person in employee %}
+        <tr>
+            <td>{{ person.name }}</td>
+            <td>{{ person.surname }}</td>
+            <td>{{ person.surname_patronymic }}</td>
+            <td>{{ person.data_admission }}</td>
+            <td>{{ person.email }}</td>
+            <td>{{ person.position.position_name }}</td>
+            <td>
+                {% if person.supervisor == None %}
+                    <p>Not date</p>
+                {% else %}
+                    {{ person.supervisor.name }}
+                {% endif %}
+            </td>
+            {% if user.is_authenticated %}
+            <td>
+                <a href="{% url 'edit_employee' person.pk %}" class="btn btn-warning">Edit</a>
+            </td>
+            {% endif %}
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 
-    <script>
-        $(document).ready(function() {
-            $(".filter-input").on("keyup", function() {
-                var filters = {};
-                $(".filter-input").each(function() {
-                    filters[$(this).data("column")] = $(this).val();
-                });
+<script>
+    $(document).ready(function() {
+        $(".filter-input").on("keyup", function() {
+            var filters = {};
+            $(".filter-input").each(function() {
+                filters[$(this).data("column")] = $(this).val();
+            });
 
-                $.ajax({
-                    url: "/api/all_employees/",
-                    data: filters,
-                    success: function(data) {
-                        $("#employee-table-body").empty();
-                        data.forEach(function(employee) {
-                            var supervisorName = employee.supervisor ? employee.supervisor.name : 'Нет начальника';
-                            $("#employee-table-body").append(`
-                                <tr>
-                                    <td>${employee.name}</td>
-                                    <td>${employee.surname}</td>
-                                    <td>${employee.surname_patronymic}</td>
-                                    <td>${employee.data_admission}</td>
-                                    <td>${employee.email}</td>
-                                    <td>${employee.position.position_name}</td>
-                                    <td>${supervisorName}</td>
-                                </tr>
-                            `);
-                        });
-                    }
-                });
+            $.ajax({
+                url: "/api/all_employees/",
+                data: filters,
+                success: function(response) {
+                    var employees = response.employees;
+                    var isAuthenticated = response.is_authenticated;
+                    $("#employee-table-body").empty();
+                    employees.forEach(function(employee) {
+                        var supervisorName = employee.supervisor ? employee.supervisor.name : 'Нет начальника';
+                        var editButton = isAuthenticated ? `<td><a href="/edit_employee/${employee.id}/" class="btn btn-warning">Edit</a></td>` : '';
+                        $("#employee-table-body").append(`
+                            <tr>
+                                <td>${employee.name}</td>
+                                <td>${employee.surname}</td>
+                                <td>${employee.surname_patronymic}</td>
+                                <td>${employee.data_admission}</td>
+                                <td>${employee.email}</td>
+                                <td>${employee.position.position_name}</td>
+                                <td>${supervisorName}</td>
+                                ${editButton}
+                            </tr>
+                        `);
+                    });
+                }
             });
         });
-    </script>
+    });
+</script>
 
 {% endblock %}
