--- a/website/templates/hierarchyEmployees/base.html
+++ b/website/templates/hierarchyEmployees/base.html
@@ -3,12 +3,14 @@
 <head>
     {% load static %}
     <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link href="{% static 'hierarchyEmployees/css/style.css' %}" rel="stylesheet">
     <link href="{% static 'hierarchyEmployees/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'hierarchyEmployees/css/bootstrap-responsive.min.css' %}" rel="stylesheet">
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <header>
